# tinyStream

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Readme.md  StreamServer.h  main.cc  single_old.cc  viewer.html
include/: BaseCamera.h  ICamera.h  StreamServer.h
